[package]
name = "sos-game"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.99"
log = "0.4.22"
web-sys = "0.3"
wasm-bindgen-futures = "0.4.49"
gloo = "0.11.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
